--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "handlebars": "^4.1.2",
     "jquery": "^3.4.1",
+    "lodash.template": ">=4.5.0",
     "lodash": "^4.17.15"
   }
 }
